fix(ui): Fix group-by-button overflow

--- a/frappe/public/scss/desk/report.scss
+++ b/frappe/public/scss/desk/report.scss
@@ -101,6 +101,12 @@
 
 .group-by-button {
 	margin: 5px;
+
+	.button-label {
+		display: inline-flex;
+		max-width: 175px;
+		overflow: hidden;
+	}
 }
 
 .comparison-message {
